# rust_tasks

file_guard_raii/: Cargo.toml  raii.txt
file_guard_raii/src/: main.rs
final/AR-Messaging/: Cargo.toml
final/AR-Messaging/src/: main.rs  message_controller.rs  models.rs
final/ar_diesel/: Cargo.toml
final/ar_diesel/src/: .env  model.rs  schema.rs
new_type_meter/: Cargo.toml
new_type_meter/src/: main.rs
pattern/dynamic_pattern/: Cargo.toml
pattern/dynamic_pattern/src/: main.rs
pattern/static_pattern/: Cargo.toml
pattern/static_pattern/src/: main.rs
smart_home/src/: main.rs
smart_home/src/api/: mod.rs  socket.rs  thermometer.rs
smart_home_2/: Cargo.toml
smart_home_2/src/: api.rs  errors.rs  main.rs  tests.rs  types.rs
smart_home_2/src/Errors/: smart_home_errors.rs
smart_home_2/src/api/: device_info_provider.rs  mod.rs  smart_home.rs
smart_home_2/src/tests/: room_tests.rs  (+3 more)
smart_home_3/chat_client/: Cargo.toml
smart_home_3/chat_server/: Cargo.toml
smart_home_3/shc/: Cargo.toml
smart_home_3/shl/: Cargo.toml
smart_home_3/smart_home_ti/: Cargo.toml
smart_home_5/: Cargo.toml  Rust webapi.postman_collection.json
smart_home_5/src/: main.rs  utilities.rs
smart_socket/socket/: Cargo.toml
smart_socket/socket_lib/: Cargo.toml
smart_socket_d/socket_lib/: Cargo.toml
smart_socket_dynamic/ConsoleApp/: ConsoleApp.sln  Dockerfile  Program.cs
smart_socket_dynamic/smart_socket_lib/: Cargo.toml
smart_socket_g/socket_lib/: Cargo.toml
therm_udp/thermometer/: Cargo.toml
therm_udp/thermometer_reader/: Cargo.toml
untitled/src/: main.rs
(+40 files in other folders)
