[package]
name = "ar-messaging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4"
serde = { version = "1.0.192", features = ["derive"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
utoipa = "4.1.0"
utoipa-swagger-ui = { version = "4.0.0", features = ["actix-web"] }
